--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background-color: #ffffff;
 }
 
 .wrapper {
@@ -30,9 +30,13 @@ header {
   color: hsl(206, 17%, 28%);
 }
 
+h3 {
+  font-size: 18pt;
+}
+
 .card {
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 5px;
+  background-color: hsl(0, 0%, 85%);
+  border-radius: 20px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
   color: hsl(206, 17%, 28%);
@@ -50,8 +54,15 @@ header {
   height: 2px;
 }
 
-.card-body {
+.card-body1 {
   min-height: 100px;
+  display: inline;
+}
+
+.card-body {
+  min-height: 75px;
+  padding-left: 75px;
+  display: none;
 }
 
 .card-footer {
